<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="detailViewmodel"
            type="com.programmers.android.apps.line.viewmodels.MemoDetailViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MemoDetatilActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/memoDetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border"
            android:hint="@string/memo_title_hint"
            android:padding="@dimen/fix_2"
            app:layout_constraintTop_toBottomOf="@id/appBar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/memoDetailImageWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_border"
            app:layout_constraintTop_toBottomOf="@id/memoDetailTitle">

            <TextView
                android:id="@+id/tvMemoImageTitleHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fix_1"
                android:text="@string/memo_image_add_hint"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnMemoImageAdd"
                android:layout_width="@dimen/btn_128"
                android:layout_height="@dimen/btn_128"
                android:layout_marginTop="@dimen/fix_10"
                android:layout_marginBottom="@dimen/fix_2"
                android:src="@drawable/ic_camera_add_30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMemoImageTitleHint" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/memoImagesRecyclerView"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_128"
                android:layout_marginStart="@dimen/fix_2"
                app:layout_constraintBottom_toBottomOf="@id/btnMemoImageAdd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnMemoImageAdd"
                app:layout_constraintTop_toTopOf="@id/btnMemoImageAdd" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/memoDetailDescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_border"
            app:layout_constraintBottom_toTopOf="@id/btnMemoCancel"
            app:layout_constraintTop_toBottomOf="@id/memoDetailImageWrapper" />

        <Button
            android:id="@+id/btnMemoCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_64"
            android:background="@drawable/bg_border"
            android:text="@string/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btnMemoOk"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_64"
            android:background="@drawable/bg_border"
            android:text="@string/btn_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnMemoCancel"
            app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>